added alt tags and norefferror

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <title>Matthew Walker Portfolio</title>
   </head>
   <body>
-    <script type="module" src="/src/index.js"></script>
+    <!-- <script type="module" src="/src/index.js"></script> -->
     <div id="root"></div>
 
 
